<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/facebook_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebookBelowLine"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="-6dp"
        android:layout_below="@+id/facebook"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/facebook_title"/>
    <TextView
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="start"
        android:background="@color/colorWhite"
        android:layout_below="@id/email"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/email_field"/>
    <TextView
        android:id="@+id/pass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="start"
        android:background="@color/colorWhite"
        android:layout_below="@id/pass"
        android:textColor="@color/colorWhite"/>
    <CheckBox
        android:id="@+id/chk_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_login"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/pass_field"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/need_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"/>
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:text="@string/sign_up"
        android:textStyle="italic"/>
</RelativeLayout>